@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1895 2004/07/04 14:27:20 wiz Exp $
+$NetBSD: TODO,v 1.1896 2004/07/04 16:38:47 minskim Exp $
 
 Suggested new packages
 ======================
@@ -295,7 +295,6 @@ Suggested package updates
 	o maradns-1.0.23
 	o marbles-1.0.6
 	o matchbox-0.8.2 [pkgsrc-wip]
-	o mathomatic-11.2e
 	o micq-0.4.11
 	o midnight-commander-4.6.0
 	o mimedefang-2.43
