@@ -1,6 +1,6 @@
-@comment $NetBSD: PLIST,v 1.2 2004/06/28 13:58:25 minskim Exp $
-bin/am_mathomatic
-man/man1/am_mathomatic.1
+@comment $NetBSD: PLIST,v 1.3 2004/07/04 16:38:47 minskim Exp $
+bin/mathomatic
+man/man1/mathomatic.1
 share/doc/${PKGBASE}/am.htm
 share/doc/${PKGBASE}/manual.htm
 share/doc/${PKGBASE}/notes.htm
